--- a/Website/public/assets/styles/home.css
+++ b/Website/public/assets/styles/home.css
@@ -6,12 +6,33 @@
     padding: 0;
 }
 
-main {
+body {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.linha {
+    display: flex;
+}
+
+.coluna {
+    display: flex;
+    flex-direction: column;
+}
+
+.historia {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    width: 100vw;
     height: 100vh;
+
+    #rainha {
+        height: 90%;
+        position: absolute;
+        top: 10%;
+        right: 0;
+    }
 }
 
 nav {
@@ -104,9 +125,98 @@ nav {
         font-weight: 500;
         margin-right: 10px;
     }
-    button:hover{
+
+    button:hover {
         background-color: white;
         color: black;
-        transition: 0.2s ;
+        transition: 0.2s;
+    }
+}
+
+.historia .linha {
+    width: 100%;
+    height: 88%;
+}
+
+.texto {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3%;
+    margin-left: 1%;
+
+    h1 {
+        font-size: 9vh;
+        font-weight: 700;
+        width: 80%;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+    }
+
+    p {
+        text-align: justify;
+        width: 80%;
+        height: 40%;
+        font-size: 3vh;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+
+    }
+}
+
+.imagem {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+
+    img {
+        position: relative;
+        right: -6%;
+        width: 75%;
+        border-radius: 15px;
+        border: 3px solid black;
+    }
+}
+
+.europa {
+    width: 100%;
+    height: 100vh;
+    background-image: url(../img/chaturanga-fundo.svg);
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    overflow: hidden;
+}
+
+.filtro {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    z-index: 1;
+    background: linear-gradient(to left, rgba(0, 0, 0, 0.7) 40%, transparent 60%);
+
+    section {
+        width: 50%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 3%;
+        position: relative;
+        
+    }
+
+    h1 {
+        font-size: 9vh;
+        font-weight: 700;
+        color: white;
+        width: 100%;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
     }
 }
