--- a/Website/public/assets/styles/home.css
+++ b/Website/public/assets/styles/home.css
@@ -163,7 +163,6 @@ nav {
         font-size: 3vh;
         word-wrap: break-word;
         overflow-wrap: break-word;
-
     }
 }
 
@@ -187,28 +186,21 @@ nav {
     height: 100vh;
     background-image: url(../img/chaturanga-fundo.svg);
     background-size: cover;
-    background-position: center;
-    position: relative;
-    overflow: hidden;
 }
 
 .filtro {
     width: 100%;
     height: 100vh;
-    position: relative;
-    z-index: 1;
-    background: linear-gradient(to left, rgba(0, 0, 0, 0.7) 40%, transparent 60%);
+    background: linear-gradient(to left, rgb(0, 0, 0) 10%, transparent 90%);
 
     section {
-        width: 50%;
-        height: 100%;
+        width: 40%;
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
         gap: 3%;
         position: relative;
-        
+        top: 15%;
+        right: -55%;
     }
 
     h1 {
@@ -216,6 +208,14 @@ nav {
         font-weight: 700;
         color: white;
         width: 100%;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+    }
+    p {
+        text-align: justify;
+        width: 100%;
+        color: white;
+        font-size: 3vh;
         word-wrap: break-word;
         overflow-wrap: break-word;
     }
