--- a/Website/public/assets/styles/home.css
+++ b/Website/public/assets/styles/home.css
@@ -133,12 +133,12 @@ nav {
     }
 }
 
-.historia .linha {
+main .linha {
     width: 100%;
     height: 88%;
 }
 
-.texto {
+.historia .texto {
     width: 100%;
     height: 100%;
     display: flex;
@@ -166,7 +166,7 @@ nav {
     }
 }
 
-.imagem {
+.historia .imagem {
     width: 100%;
     height: 100%;
     display: flex;
@@ -211,6 +211,7 @@ nav {
         word-wrap: break-word;
         overflow-wrap: break-word;
     }
+
     p {
         text-align: justify;
         width: 100%;
@@ -218,5 +219,62 @@ nav {
         font-size: 3vh;
         word-wrap: break-word;
         overflow-wrap: break-word;
+    }
+}
+
+.persia {
+    width: 100%;
+    height: 100vh;
+    background-color: white;
+    
+    #torre {
+        height: 90%;
+        position: absolute;
+        top: 205%;
+        right: 0;
+    }
+}
+
+.persia .texto {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3%;
+    margin-left: 1%;
+
+    h1 {
+        font-size: 9vh;
+        font-weight: 700;
+        width: 80%;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+    }
+
+    p {
+        text-align: justify;
+        width: 80%;
+        height: 40%;
+        font-size: 3vh;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+    }
+}
+
+.persia .imagem {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    img {
+        position: relative;
+        right: -6%;
+        top: 6%;
+        width: 75%;
+        height: 60%;
+        border-radius: 15px;
+        border: 3px solid black;
     }
 }
