--- a/Website/public/assets/styles/home.css
+++ b/Website/public/assets/styles/home.css
@@ -278,3 +278,101 @@ main .linha {
         border: 3px solid black;
     }
 }
+
+.tres {
+    width: 100%;
+    height: 100vh;
+    background-color: black;    
+    #rei {
+        height: 90%;
+        position: absolute;
+        top: 305%;
+        left: 0;
+    }
+}
+
+.tres .texto {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3%;
+    margin-left: 1%;
+    color: white;
+
+    h1 {
+        font-size: 9vh;
+        font-weight: 700;
+        width: 80%;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+    }
+
+    p {
+        text-align: justify;
+        width: 80%;
+        height: 40%;
+        font-size: 3vh;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+    }
+}
+
+.tres .imagem {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    img {
+        position: relative;
+        left: 12%;
+        top: 6%;
+        width: 75%;
+        height: 60%;
+        border-radius: 15px;
+        border: 3px solid white;
+    }
+}
+
+.moderno {
+    width: 100%;
+    height: 100vh;
+    background-image: url(../img/bob-fischer-fundo.jpg);
+    background-size: cover;
+}
+
+.moderno .filtro {
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(to right, rgb(0, 0, 0) 10%, transparent 90%);
+
+    section {
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+        gap: 3%;
+        position: relative;
+        top: 15%;
+        left: 5%;
+    }
+
+    h1 {
+        font-size: 9vh;
+        font-weight: 700;
+        color: white;
+        width: 100%;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+    }
+
+    p {
+        text-align: justify;
+        width: 100%;
+        color: white;
+        font-size: 3vh;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+    }
+}
