--- a/Website/public/assets/styles/cadastro-login.css
+++ b/Website/public/assets/styles/cadastro-login.css
@@ -6,89 +6,145 @@
     padding: 0;
 }
 
-body{
+body {
     width: 100vw;
     height: 100vh;
+    display: flex;
+    overflow: hidden;
 }
 
-.coluna{
+.coluna {
     display: flex;
     flex-direction: column;
 }
 
-.linha{
+.linha {
     display: flex;
 }
 
-nav{
-    width: 100vw;
-    height: 10vh;
-    background-color: blue;
-    .logo{
-        width: 10%;
-        margin: 0.5% 2%;
-    }
-}
-
-.formulario{
+.main_formulario {
     width: 50vw;
-    height: 90vh;
     display: flex;
     justify-content: center;
-    align-items: start;
-
+    align-items: center;
+    padding: 2% 0;
 }
 
-.imagem{
-    height: 90vh;
+.imagem {
     width: 50vw;
-    display: flex;
-    align-items: center;
-    justify-content: start;    img{
-        height: 80%;
+    height: 100vh;
+    border-left: black 2px solid;
+    img {
+        height: 101vh;
+        width: 100%;
+        background-size: cover;
     }
 }
 
-.form{
-    height: 80%;
-    width: 50%;
+.formulario {
+    width: 60%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    padding: 2%;
+    justify-content: start;
+    align-items: start;
+}
+
+h1{
+    font-size: 6vh;
+}
+
+h2{
+    font-size: 3vh;
+}
+
+label {
+    margin-top: 2%;
+    font-size: 2.9vh;
+}
+
+input {
+    width: 100%;
+    height: 7%;
+    border-radius: 4px;
+    border: 0.5px #282828 solid;
+    margin-bottom: 1%;
+    font-size: 2vh;
+    padding-left: 4px;
+}
+
+select {
+    width: 100%;
+    height: 7%;
+    border-radius: 4px;
+    border: 0.5px #282828 solid;
+    font-size: 2vh;    
+}
+
+button {
+    align-self: center;
+    border: none;
+    background-color: black;
+    color: white;
+    width: 100%;
+    height: 7%;
     border-radius: 5px;
-    border: 1px #878787 solid;
+    margin-top: 5%;
+    font-size: 3vh;
 }
 
-input{
-    width: 90%;
-    height: 5%;
-    border-radius: 4px;
-    border: 0.5px #282828 solid;
-    padding: 2%;
-    font-size: 2%;
-    margin-bottom: 4%;
+.caixa-pai {
+    width: 100%;
+    height: 10%;
+    display: flex;
+    justify-content: space-between;
+    gap: 2%;
+    margin-top: 2%;
 }
 
-.form .linha{
-    gap: 4%;
-    select{
-    width: 70%;
+.caixa {
     height: 100%;
-    border-radius: 4px;
-    border: 0.5px #282828 solid;
-    padding: 2%;
-    font-size: 2%;
-    margin-bottom: 4%;
+    width: 50%;
+    input {
+        width: 100%;
+        height: 65%;
     }
-    input{
-    width: 30%;
-    height: 100%;
-    border-radius: 4px;
-    border: 0.5px #282828 solid;
-    padding: 2%;
-    font-size: 2%;
-    margin-bottom: 4%;
+    select {
+        width: 100%;
+        height: 65%;
     }
 }
 
+.conta {
+    align-self: center;
+    margin-top: 4%;
+    font-size: 2.5vh;
+}
 
+.voltar{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    position: absolute;
+    top: -5%;
+    left: 1%;
+    transition:  0.2s;
+    background-color: black;
+    border: 2px black solid ;
+}
+
+.voltar svg{
+    width: 50px;
+    position: absolute;
+    top: 5%;
+    left: 8%;
+    stroke: #ffff;
+}
+
+.voltar:hover{
+    background-color: white;
+    border: 2px black solid ;
+    svg{
+    stroke: #000;
+    }
+}
