--- a/Website/public/assets/styles/login.css
+++ b/Website/public/assets/styles/login.css
@@ -6,6 +6,10 @@
     padding: 0;
 }
 
+*:focus{
+    outline: none;
+}
+
 body {
     width: 100vw;
     height: 100vh;
@@ -27,7 +31,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 2% 0;
+    padding: 1% 0;
 }
 
 .imagem {
@@ -46,39 +50,64 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
     align-items: start;
+    gap: 8%;
 }
 
 h1{
     font-size: 6vh;
+    font-weight: 500;
 }
 
 h2{
-    font-size: 3vh;
+    font-size: 4vh;
+    font-weight: 500;
 }
 
 label {
-    margin-top: 2%;
-    font-size: 2.9vh;
+    font-size: 2.7vh;
+}
+.caixa{
+    width: 100%;
+    height: 8%;
+}
+.senha{
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    border-radius: 4px;
+    border: 0.5px #282828 solid;
+    font-size: 2.5vh;
+    text-align: center;
+    input{
+        width: 90%;
+        height: 100%;
+        border: none;
+    }
+    .mostrar{
+    cursor: pointer;
+        margin-top: 0%;
+        width: 10%;
+        height: 100%;
+        background-color: white;
+            img{
+                width: 90%;
+                position: relative;
+                top:10%;
+                right: 20%;
+            }
+    }
 }
 
 input {
     width: 100%;
-    height: 7%;
+    height: 100%;
     border-radius: 4px;
     border: 0.5px #282828 solid;
-    margin-bottom: 1%;
-    font-size: 2vh;
-    padding-left: 4px;
-}
-
-select {
-    width: 100%;
-    height: 7%;
-    border-radius: 4px;
-    border: 0.5px #282828 solid;
-    font-size: 2vh;    
+    font-size: 2.5vh;
+    text-align: center;
 }
 
 button {
@@ -93,28 +122,6 @@ button {
     font-size: 3vh;
 }
 
-.caixa-pai {
-    width: 100%;
-    height: 10%;
-    display: flex;
-    justify-content: space-between;
-    gap: 2%;
-    margin-top: 2%;
-}
-
-.caixa {
-    height: 100%;
-    width: 50%;
-    input {
-        width: 100%;
-        height: 65%;
-    }
-    select {
-        width: 100%;
-        height: 65%;
-    }
-}
-
 .conta {
     align-self: center;
     margin-top: 4%;
@@ -122,23 +129,24 @@ button {
 }
 
 .voltar{
-    width: 60px;
-    height: 60px;
+    width: 55px;
+    height: 55px;
     border-radius: 50%;
     position: absolute;
     top: -5%;
-    left: 1%;
+    left: 2%;
     transition:  0.2s;
     background-color: black;
     border: 2px black solid ;
 }
 
 .voltar svg{
-    width: 50px;
+    width: 45px;
     position: absolute;
     top: 5%;
     left: 8%;
     stroke: #ffff;
+    transition:  0.2s;
 }
 
 .voltar:hover{
