--- a/Website/public/assets/styles/cadastro.css
+++ b/Website/public/assets/styles/cadastro.css
@@ -161,3 +161,25 @@ button {
     stroke: #000;
     }
 }
+
+.linha_radio{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.caixa_radio{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    label{
+        font-size: 2.5vh;
+    }
+}
+
+.radio{
+    height: 2vh;
+    margin-top: 5%;
+    margin-right: 4%;
+}
