--- a/Website/public/assets/styles/home.css
+++ b/Website/public/assets/styles/home.css
@@ -103,6 +103,19 @@ nav {
     justify-content: start;
     align-items: center;
 
+    .sair {
+        padding: 2% 10%;
+        background-color: transparent;
+        border: white 2px solid;
+        border-radius: 5px;
+        color: white;
+        font-size: 140%;
+        font-weight: 500;
+        position: relative;
+        left: 40%;
+        display: none;
+    }
+
     .entrar {
         padding: 2% 6%;
         background-color: transparent;
@@ -226,7 +239,7 @@ main .linha {
     width: 100%;
     height: 100vh;
     background-color: white;
-    
+
     #torre {
         height: 90%;
         position: absolute;
@@ -268,6 +281,7 @@ main .linha {
     height: 100%;
     display: flex;
     align-items: center;
+
     img {
         position: relative;
         right: -6%;
@@ -282,7 +296,8 @@ main .linha {
 .tres {
     width: 100%;
     height: 100vh;
-    background-color: black;    
+    background-color: black;
+
     #rei {
         height: 90%;
         position: absolute;
@@ -325,6 +340,7 @@ main .linha {
     height: 100%;
     display: flex;
     align-items: center;
+
     img {
         position: relative;
         left: 12%;
@@ -347,6 +363,7 @@ main .linha {
     width: 100%;
     height: 100vh;
     background: linear-gradient(to right, rgb(0, 0, 0) 10%, transparent 90%);
+
     section {
         width: 40%;
         display: flex;
