--- a/Website/public/assets/styles/home.css
+++ b/Website/public/assets/styles/home.css
@@ -37,7 +37,7 @@ body {
 
 nav {
     width: 100%;
-    height: 12%;
+    height: 12vh;
     background-color: black;
     display: flex;
     align-items: center;
