--- a/Website/public/assets/styles/quizes.css
+++ b/Website/public/assets/styles/quizes.css
@@ -1,6 +1,14 @@
 /* Não usar pure white or pure black: https://uxplanet.org/basicdesign-never-use-pure-black-in-typography-36138a3327a6 */
 /* The 4-point grid system: https://medium.com/@sainzkike/controlling-spacing-in-design-systems-multiple-spacing-9bf1afec87f */
 
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
+    display: flex;
+}
+
 :root {
     --primary-brand-color: #ED145B;
     --secondary-brand-color: #0762C8;
@@ -71,4 +79,92 @@ button {
 
 .text-new-gray {
     color: var(--new-gray);
+}
+
+
+aside{
+    width: 16vw;
+    height: 100vh;
+    background-color: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+aside ul{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5vw;
+    list-style-type: none;
+}
+
+aside #logo{
+    position: relative;
+    top: -18vh;
+    width: 12vw;
+}
+
+.coluna{
+    display: flex;
+    flex-direction: column;
+
+    img{
+        cursor: pointer;
+    }
+}
+
+.linha{
+    display: flex;
+}
+
+#dashboard{
+    background-color: white;
+    color: #000000;
+}
+aside svg{
+    width: 30%;
+    height: 4vh;
+    padding: 10px 0px;
+}
+
+.caixa{
+    display: flex;
+    font-size: 1.2vw;
+    font-weight: 900;
+    justify-content: start;
+    width: 70%;
+}
+
+.select-aside{
+    align-items: center;
+    width: 120%;
+    display: flex;
+    background-color: rgba(198, 75, 75, 0);
+    border-radius: 10px;
+    cursor: pointer;
+    border: 1px solid white;
+    color: white;
+    transition: background-color 0.2s, color 0.2s;
+}
+
+.select-aside #dashboard_icon path{
+    fill: #87502F;
+    stroke: #87502F;
+    transition: fill 0.2s, stroke 0.2s;
+}
+.select-aside svg path{
+    fill: white;
+    stroke: white;
+    transition: fill 0.2s, stroke 0.2s;
+}
+
+.select-aside:hover{
+    background-color: white;
+    color: #000000;
+}
+
+.select-aside:hover svg path {
+    fill: #000000;
+    stroke: #000000;
 }
