--- a/Website/public/assets/styles/login.css
+++ b/Website/public/assets/styles/login.css
@@ -71,6 +71,7 @@ label {
 .caixa{
     width: 100%;
     height: 8%;
+    margin-bottom: 3vh;
 }
 .senha{
     cursor: pointer;
@@ -116,7 +117,7 @@ button {
     background-color: black;
     color: white;
     width: 100%;
-    height: 7%;
+    height: 7vh;
     border-radius: 5px;
     margin-top: 5%;
     font-size: 3vh;
@@ -155,4 +156,12 @@ button {
     svg{
     stroke: #000;
     }
+}
+
+h5{
+    font-size: 1vw;
+    color: red;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    display: none;
 }
