--- a/Website/public/assets/styles/quizes.css
+++ b/Website/public/assets/styles/quizes.css
@@ -33,14 +33,41 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+#quiz{
+    width: 84vw;
+    height: 100vh;
+    display: none;
+    justify-content: center;
+    align-items: center;
+
+}
+
 button {
+    width: 100%;
+    height: 5vh;
+    border-radius: 5px;
     font-family: monospace;
     font-weight: bold;
+    font-size: 3vh;
+}
+
+button:hover{
+    background-color: grey;
+}
+
+#jogo{
+    width: 40vw;
+    height: auto;
+    padding: 2vw;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px;
+    
 }
 
 .flex-colunar {
     display: flex;
     flex-direction: column;
+    gap: 3vh;
 }
 
 .width-fit-content {
@@ -80,6 +107,13 @@ button {
 
 .text-new-gray {
     color: var(--new-gray);
+}
+
+#pontuacaoEJogo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 
