--- a/Website/public/assets/styles/cadastro.css
+++ b/Website/public/assets/styles/cadastro.css
@@ -183,3 +183,51 @@ button {
     margin-top: 5%;
     margin-right: 4%;
 }
+
+#aviso1 {
+  width: 320px;
+  padding: 12px;
+  display: none;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  background: #EF665B;
+  border-radius: 8px;
+  box-shadow: 0px 0px 5px -3px #111;
+  position: absolute;
+  top: 5vh;
+  left: 40%;
+}
+
+#aviso2 {
+  width: 320px;
+  padding: 12px;
+  display: none;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  background: green;
+  border-radius: 8px;
+  box-shadow: 0px 0px 5px -3px #111;
+  position: absolute;
+  top: 5vh;
+  left: 40%;
+}
+
+.alerta_icone {
+  width: 20px;
+  height: 20px;
+  transform: translateY(-2px);
+  margin-right: 8px;
+  img{
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.alerta_texto {
+  font-weight: 500;
+  font-size: 14px;
+  color: #fff;
+}
+
