--- a/Website/public/assets/styles/quizes.css
+++ b/Website/public/assets/styles/quizes.css
@@ -51,7 +51,7 @@ button {
 }
 
 button:hover{
-    background-color: grey;
+    background-color: rgb(205, 205, 205);
 }
 
 #jogo{
@@ -337,5 +337,37 @@ margin-left: 5%;
     justify-content: space-around;
     font-weight: bold;
     border-bottom: #87502F solid 2px;
+}
+
+#aviso1 {
+  width: 320px;
+  padding: 12px;
+  display: none;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  background: #EF665B;
+  border-radius: 8px;
+  box-shadow: 0px 0px 5px -3px #111;
+  position: absolute;
+  top: 5vh;
+  left: 45%;
+}
+
+.alerta_icone {
+  width: 20px;
+  height: 20px;
+  transform: translateY(-2px);
+  margin-right: 8px;
+  img{
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.alerta_texto {
+  font-weight: 500;
+  font-size: 14px;
+  color: #fff;
 }
 
