--- a/Website/public/assets/styles/quizes.css
+++ b/Website/public/assets/styles/quizes.css
@@ -1,7 +1,10 @@
 /* Não usar pure white or pure black: https://uxplanet.org/basicdesign-never-use-pure-black-in-typography-36138a3327a6 */
 /* The 4-point grid system: https://medium.com/@sainzkike/controlling-spacing-in-design-systems-multiple-spacing-9bf1afec87f */
 
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
+    font-family: 'poppins', 'Courier New', Courier, monospace;
     margin: 0;
     padding: 0;
 }
@@ -30,10 +33,9 @@ body {
 body {
     color: var(--new-black);
     background-color: var(--new-white);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-#quiz{
+#quiz {
     width: 84vw;
     height: 100vh;
     display: none;
@@ -50,17 +52,17 @@ button {
     font-size: 3vh;
 }
 
-button:hover{
+button:hover {
     background-color: rgb(205, 205, 205);
 }
 
-#jogo{
+#jogo {
     width: 40vw;
     height: auto;
     padding: 2vw;
     border-radius: 10px;
     box-shadow: 2px 2px 10px;
-    
+
 }
 
 .flex-colunar {
@@ -108,7 +110,7 @@ button:hover{
     color: var(--new-gray);
 }
 
-#pontuacaoEJogo{
+#pontuacaoEJogo {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -299,31 +301,27 @@ section {
     font-size: 14px;
 }
 
-.txt_viveiro{
+.txt_viveiro {
 
     margin-left: 2%
+}
+
+.txt_sensor {
+
+    margin-left: 5%;
 
 }
 
-.txt_sensor{
+.txt_data {}
 
-margin-left: 5%;
-
-}
-
-.txt_data{
-
-
-}
-
-.txt_ppm{
+.txt_ppm {
 
     margin-right: 11%;
 
 }
 
 
-.txt_alerta{
+.txt_alerta {
 
 
     margin-right: 4.8%;
@@ -340,34 +338,34 @@ margin-left: 5%;
 }
 
 #aviso1 {
-  width: 320px;
-  padding: 12px;
-  display: none;
-  flex-direction: row;
-  align-items: center;
-  justify-content: start;
-  background: #EF665B;
-  border-radius: 8px;
-  box-shadow: 0px 0px 5px -3px #111;
-  position: absolute;
-  top: 5vh;
-  left: 45%;
+    width: 320px;
+    padding: 12px;
+    display: none;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    background: #EF665B;
+    border-radius: 8px;
+    box-shadow: 0px 0px 5px -3px #111;
+    position: absolute;
+    top: 5vh;
+    left: 45%;
 }
 
 .alerta_icone {
-  width: 20px;
-  height: 20px;
-  transform: translateY(-2px);
-  margin-right: 8px;
-  img{
-    width: 100%;
-    height: 100%;
-  }
+    width: 20px;
+    height: 20px;
+    transform: translateY(-2px);
+    margin-right: 8px;
+
+    img {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .alerta_texto {
-  font-weight: 500;
-  font-size: 14px;
-  color: #fff;
+    font-weight: 500;
+    font-size: 14px;
+    color: #fff;
 }
-
