--- a/Website/public/assets/styles/cadastroADM.css
+++ b/Website/public/assets/styles/cadastroADM.css
@@ -23,7 +23,6 @@ aside ul {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 0.5vw;
     list-style-type: none;
 }
 
@@ -63,7 +62,7 @@ aside svg {
     padding: 10px 0px;
 }
 
-.caixa {
+.caixa_aside {
     display: flex;
     font-size: 1.2vw;
     justify-content: start;
@@ -114,10 +113,15 @@ aside svg {
 }
 
 .formulario {
+    padding: 0px 2%;
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: start;
+    width: auto;
+    height: 86%;
+    border: 2px solid black;
+    border-radius: 10px;
 }
 
 h1{
@@ -142,7 +146,7 @@ label {
 
 input {
     width: 100%;
-    height: 7%;
+    height: 8%;
     border-radius: 4px;
     border: 0.5px #282828 solid;
     margin-bottom: 1%;
@@ -152,7 +156,7 @@ input {
 
 select {
     width: 100%;
-    height: 7%;
+    height: 8%;
     border-radius: 4px;
     border: 0.5px #282828 solid;
     font-size: 2vh;    
@@ -164,7 +168,7 @@ button {
     background-color: black;
     color: white;
     width: 100%;
-    height: 7%;
+    height: 8%;
     border-radius: 5px;
     margin-top: 5%;
     font-size: 3vh;
@@ -172,7 +176,6 @@ button {
 
 .caixa-pai {
     width: 100%;
-    height: 10%;
     display: flex;
     justify-content: space-between;
     gap: 4%;
