mudança em algumas inputs

--- a/Website/public/assets/styles/dashboard.css
+++ b/Website/public/assets/styles/dashboard.css
@@ -27,10 +27,16 @@ aside ul {
     list-style-type: none;
 }
 
-aside #logo {
+aside .vindo {
     position: relative;
-    top: -18vh;
+
     width: 12vw;
+    font-size: 3vh;
+    top: -10vh;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    text-align: center;
 }
 
 .coluna {
