--- a/Website/public/assets/styles/dashboard.css
+++ b/Website/public/assets/styles/dashboard.css
@@ -8,6 +8,7 @@
 
 body {
     display: flex;
+    background-color: #ebebeb;
 }
 
 aside {
@@ -132,7 +133,7 @@ aside svg {
     height: 100%;
     display: flex;
     flex-direction: column;
-    border: 1px solid gray;
+    background-color: white;
     border-radius: 10px;
 
     p {
@@ -167,7 +168,6 @@ aside svg {
 }
 
 .caixas_grafico {
-    border: 1px solid gray;
     display: flex;
     justify-content: center;
     align-items: center;
