--- a/Website/public/assets/styles/quizes.css
+++ b/Website/public/assets/styles/quizes.css
@@ -27,7 +27,7 @@ body {
     --danger-light: #f0c1c6;
     --new-gray: #CCCCCC;
     --new-black: #212427;
-    --new-white: #E8E8E8;
+    --new-white: white;
 }
 
 body {
@@ -41,28 +41,112 @@ body {
     display: none;
     justify-content: center;
     align-items: center;
-
 }
 
-button {
-    width: 100%;
+.botoes {
+    display: flex;
+    width: 80%;
     border-radius: 5px;
-    font-family: monospace;
-    font-weight: bold;
     font-size: 3vh;
+    align-self: center;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2vh;
 }
 
-button:hover {
+.botoes:hover {
+    transition: 0.2s;
     background-color: rgb(205, 205, 205);
+}
+
+#infoQuestao {
+    margin-top: 2vh;
+    background-color: black;
+    color: white;
+    width: 23%;
+    border-radius: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+.option {
+    display: flex;
+    align-items: center;
+    width: 90%;
+    padding: 2vh 1vw;
+    border-radius: 10px;
+    background-color: #f7f7f7;
+    cursor: pointer;
+    border: 2px solid #dedede;
+
+}
+
+.option:hover {
+    background-color: #b9b9b9;
+    border: 2px solid #464646;
+    transition: 0.2s;
+}
+
+.btnConcluir {
+    top: 10vh;
+    left: 22vw;
+    display: inline-block;
+    position: absolute;
+    height: 6vh;
+    width: 9vw;
+    font-size: 3vh;
+    border-radius: 10px;
+    font-family: poppins, monospace;
+}
+
+input[type="radio"]:checked+.option {
+    background-color: #dfdfdf;
+    color: white;
+    border: black 2px solid;
+    color: black;
+
+    .bolinha {
+        background-color: black;
+        color: white;
+        transition: 0.2;
+    }
+
+    transition: 0.2s;
 }
 
 #jogo {
     width: 40vw;
+    background-color: #f7f7f7;
     height: auto;
-    padding: 2vw;
     border-radius: 10px;
-    box-shadow: 2px 2px 10px;
+    padding: 0vh 2vw;
+    border: 2px solid #dedede;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
 
+.bolinha {
+    background-color: #dedede;
+    display: flex;
+    text-align: center;
+    height: 35px;
+    width: 35px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+
+#msgFinal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 3vh;
+}
+
+#pontuacaoFinal{
+    align-self: center;
+    margin-top: 4vh;
+    font-size: 3vh;
 }
 
 .flex-colunar {
@@ -71,52 +155,72 @@ button:hover {
     gap: 3vh;
 }
 
-.width-fit-content {
-    width: fit-content;
-}
-
-.border-primary {
-    border: 3px solid var(--primary-brand-color);
-}
-
-.border-secondary {
-    border: 3px solid var(--secondary-brand-color);
-}
-
 .padding-8 {
-    padding: 8px;
+    padding: 2px;
+}
+
+#tituloQuiz, .textao {
+    font-weight: bold;
+    font-size: 3vh;
 }
 
 .text-bold {
-    font-weight: bold;
+    font-weight: 500;
+    
 }
 
 .text-success-with-bg {
     color: var(--success-dark);
+    border-radius: 10px;
     background-color: var(--success-light);
+    transition: 0.2s;
+
+    .bolinha {
+        background-color: var(--success-dark);
+        color: white;
+    }
 }
 
 .text-warning-with-bg {
     color: var(--warning-dark);
     background-color: var(--warning-light);
+    border-radius: 10px;
+    transition: 0.2s;
+
+    .bolinha {
+        background-color: var(--warning-dark);
+        color: white;
+    }
 }
 
 .text-danger-with-bg {
     color: var(--danger-dark);
     background-color: var(--danger-light);
+    border-radius: 10px;
+    transition: 0.2s;
+
+    .bolinha {
+        background-color: var(--danger-dark);
+        color: white;
+    }
 }
 
 .text-new-gray {
     color: var(--new-gray);
+    transition: 0.2s;
 }
 
-#pontuacaoEJogo {
+#pontuacao {
+    width: 30vw;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border: 2px solid #dedede;
+    background-color: #f7f7f7;
+    border-radius: 10px;
 }
-
 
 aside {
     width: 16vw;
@@ -376,6 +480,11 @@ section {
     align-items: center;
 }
 
+canvas {
+    width: 40vw;
+    height: 40%;
+}
+
 .historicoPorcentagem {
     width: 15%;
     text-align: center;
@@ -390,4 +499,9 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.inicioQuiz {
+    height: 100vh;
+    width: 84vw
 }
