--- a/Website/public/assets/styles/xadrez.css
+++ b/Website/public/assets/styles/xadrez.css
@@ -203,14 +203,22 @@ nav {
 
 .card {
     margin: 1vh 0vh;
-    width: 31%;
+    width: 30.6%;
     height: 31vh;
     background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 1.5% 1%;
-    border-radius: 10px;   
+    border-radius: 10px;  
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.697); 
+    border: 1px solid rgb(255, 255, 255); 
+}
+
+.card:hover{
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.863);
+    border: 1px solid rgb(0, 0, 0); 
+    transition: 0.4s;
 }
 
 .imagemPecas {
