--- a/Website/public/assets/styles/campoes.css
+++ b/Website/public/assets/styles/campoes.css
@@ -192,3 +192,17 @@ h1 {
         margin: 1vh 1vw;
     }
 }
+
+footer{
+    font-size: 2vh;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 8vh;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
