--- a/Website/public/assets/styles/home.css
+++ b/Website/public/assets/styles/home.css
@@ -394,9 +394,15 @@ main .linha {
 }
 
 footer{
+    font-size: 2vh;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    height: 40vh;
-    background-color: red;
+    height: 8vh;
+    text-align: center;
     display: flex;
     flex-direction: column;
 }
