--- a/Website/public/assets/styles/xadrez.css
+++ b/Website/public/assets/styles/xadrez.css
@@ -258,3 +258,17 @@ nav {
         text-align: justify;
     }
 }
+
+footer{
+    font-size: 2vh;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 8vh;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
