--- a/Website/public/assets/styles/quizes.css
+++ b/Website/public/assets/styles/quizes.css
@@ -135,7 +135,7 @@ input[type="radio"]:checked+.option {
     border-radius: 50%;
 }
 
-#msgFinal{
+#msgFinal {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -143,7 +143,7 @@ input[type="radio"]:checked+.option {
     font-size: 3vh;
 }
 
-#pontuacaoFinal{
+#pontuacaoFinal {
     align-self: center;
     margin-top: 4vh;
     font-size: 3vh;
@@ -159,14 +159,15 @@ input[type="radio"]:checked+.option {
     padding: 2px;
 }
 
-#tituloQuiz, .textao {
+#tituloQuiz,
+.textao {
     font-weight: bold;
     font-size: 3vh;
 }
 
 .text-bold {
     font-weight: 500;
-    
+
 }
 
 .text-success-with-bg {
@@ -503,5 +504,38 @@ canvas {
 
 .inicioQuiz {
     height: 100vh;
-    width: 84vw
+    width: 84vw;
+    display: flex;
+}
+
+.textosQuiz {
+    width: 48%;
+    height: 100%;
+    padding-left: 3vw;
+    h1 {
+        margin-top: 15vh;
+        color: black;
+        font-size: 8vh;
+        font-weight: 800;
+        text-align: justify;
+    }
+    p {
+        text-align: justify;
+        color: grey;
+        font-size: 4vh;
+        font-weight: 700;
+    }
+}
+
+.imagemQuiz {
+    width: 45%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    img{
+        width: 70vw;
+        height: 90vh;
+    }
 }
