--- a/Website/public/assets/styles/cadastro.css
+++ b/Website/public/assets/styles/cadastro.css
@@ -199,6 +199,21 @@ button {
   left: 40%;
 }
 
+#aviso3 {
+  width: 320px;
+  padding: 12px;
+  display: none;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  background: #EF665B;
+  border-radius: 8px;
+  box-shadow: 0px 0px 5px -3px #111;
+  position: absolute;
+  top: 5vh;
+  left: 40%;
+}
+
 #aviso2 {
   width: 320px;
   padding: 12px;
@@ -213,6 +228,7 @@ button {
   top: 5vh;
   left: 40%;
 }
+
 
 .alerta_icone {
   width: 20px;
